--- a/app/app.Client/Shared/Player.cshtml
+++ b/app/app.Client/Shared/Player.cshtml
@@ -20,7 +20,7 @@
             <div class='player-timeline col-md-2'>
                 <span class='player-timepassed'></span>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8" style="padding:0;">
                 <div class='player-controls-seekbar col-md-8'>
                     <input class='player-seekbar slider' type='range' />
                 </div>
