--- a/app/app.Client/wwwroot/css/player.css
+++ b/app/app.Client/wwwroot/css/player.css
@@ -31,6 +31,7 @@
     display: inline-block;
     font-size: 2.5rem;
     margin: 0 10px;
+    cursor : pointer;
 }
 
 .player-controls-buttons .glyphicon {
